--- a/OpenSC/OpenSC.csproj
+++ b/OpenSC/OpenSC.csproj
@@ -51,6 +51,12 @@
     <Compile Include="ChildWindowBase.Designer.cs">
       <DependentUpon>ChildWindowBase.cs</DependentUpon>
     </Compile>
+    <Compile Include="ChildWindowWithTitle.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="ChildWindowWithTitle.Designer.cs">
+      <DependentUpon>ChildWindowWithTitle.cs</DependentUpon>
+    </Compile>
     <Compile Include="MainForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -59,8 +65,23 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RouterControlForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="RouterControlForm.Designer.cs">
+      <DependentUpon>RouterControlForm.cs</DependentUpon>
+    </Compile>
+    <Compile Include="RouterInputOutputControl.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="RouterInputOutputControl.Designer.cs">
+      <DependentUpon>RouterInputOutputControl.cs</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="ChildWindowBase.resx">
       <DependentUpon>ChildWindowBase.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="ChildWindowWithTitle.resx">
+      <DependentUpon>ChildWindowWithTitle.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="MainForm.resx">
       <DependentUpon>MainForm.cs</DependentUpon>
@@ -74,6 +95,12 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="RouterControlForm.resx">
+      <DependentUpon>RouterControlForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="RouterInputOutputControl.resx">
+      <DependentUpon>RouterInputOutputControl.cs</DependentUpon>
+    </EmbeddedResource>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
