--- a/OpenSC/OpenSC.csproj
+++ b/OpenSC/OpenSC.csproj
@@ -45,53 +45,53 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="ChildWindowBase.cs">
+    <Compile Include="GUI\ChildWindowBase.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="ChildWindowBase.Designer.cs">
+    <Compile Include="GUI\ChildWindowBase.Designer.cs">
       <DependentUpon>ChildWindowBase.cs</DependentUpon>
     </Compile>
-    <Compile Include="ChildWindowWithTitle.cs">
+    <Compile Include="GUI\ChildWindowWithTitle.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="ChildWindowWithTitle.Designer.cs">
+    <Compile Include="GUI\ChildWindowWithTitle.Designer.cs">
       <DependentUpon>ChildWindowWithTitle.cs</DependentUpon>
     </Compile>
-    <Compile Include="MainForm.cs">
+    <Compile Include="GUI\MainForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="MainForm.Designer.cs">
+    <Compile Include="GUI\MainForm.Designer.cs">
       <DependentUpon>MainForm.cs</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="RouterControlForm.cs">
+    <Compile Include="GUI\Routers\RouterControlForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="RouterControlForm.Designer.cs">
+    <Compile Include="GUI\Routers\RouterControlForm.Designer.cs">
       <DependentUpon>RouterControlForm.cs</DependentUpon>
     </Compile>
-    <Compile Include="RouterInputOutputControl.cs">
+    <Compile Include="GUI\Routers\RouterInputOutputControl.cs">
       <SubType>UserControl</SubType>
     </Compile>
-    <Compile Include="RouterInputOutputControl.Designer.cs">
+    <Compile Include="GUI\Routers\RouterInputOutputControl.Designer.cs">
       <DependentUpon>RouterInputOutputControl.cs</DependentUpon>
     </Compile>
-    <Compile Include="Timer.cs" />
-    <Compile Include="TimerMode.cs" />
-    <Compile Include="TimerWindow.cs">
+    <Compile Include="Model\Timers\Timer.cs" />
+    <Compile Include="Model\Timers\TimerMode.cs" />
+    <Compile Include="GUI\Timers\TimerWindow.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="TimerWindow.Designer.cs">
+    <Compile Include="GUI\Timers\TimerWindow.Designer.cs">
       <DependentUpon>TimerWindow.cs</DependentUpon>
     </Compile>
-    <EmbeddedResource Include="ChildWindowBase.resx">
+    <EmbeddedResource Include="GUI\ChildWindowBase.resx">
       <DependentUpon>ChildWindowBase.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="ChildWindowWithTitle.resx">
+    <EmbeddedResource Include="GUI\ChildWindowWithTitle.resx">
       <DependentUpon>ChildWindowWithTitle.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="MainForm.resx">
+    <EmbeddedResource Include="GUI\MainForm.resx">
       <DependentUpon>MainForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
@@ -104,13 +104,13 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
-    <EmbeddedResource Include="RouterControlForm.resx">
+    <EmbeddedResource Include="GUI\Routers\RouterControlForm.resx">
       <DependentUpon>RouterControlForm.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="RouterInputOutputControl.resx">
+    <EmbeddedResource Include="GUI\Routers\RouterInputOutputControl.resx">
       <DependentUpon>RouterInputOutputControl.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="TimerWindow.resx">
+    <EmbeddedResource Include="GUI\Timers\TimerWindow.resx">
       <DependentUpon>TimerWindow.cs</DependentUpon>
     </EmbeddedResource>
     <None Include="Properties\Settings.settings">
@@ -173,6 +173,9 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\timer_stopped.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Model\Routers\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
