--- a/OpenSC/OpenSC.csproj
+++ b/OpenSC/OpenSC.csproj
@@ -70,6 +70,12 @@
     <Compile Include="GUI\Timers\TimerEditWindow.Designer.cs">
       <DependentUpon>TimerEditWindow.cs</DependentUpon>
     </Compile>
+    <Compile Include="GUI\Timers\TimerList.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="GUI\Timers\TimerList.Designer.cs">
+      <DependentUpon>TimerList.cs</DependentUpon>
+    </Compile>
     <Compile Include="Model\Timers\TimerDatabase.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -104,6 +110,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="GUI\Timers\TimerEditWindow.resx">
       <DependentUpon>TimerEditWindow.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="GUI\Timers\TimerList.resx">
+      <DependentUpon>TimerList.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
