--- a/OpenSC/OpenSC.csproj
+++ b/OpenSC/OpenSC.csproj
@@ -77,6 +77,7 @@
     <Compile Include="GUI\Timers\TimerList.Designer.cs">
       <DependentUpon>TimerList.cs</DependentUpon>
     </Compile>
+    <Compile Include="GUI\WorkspaceManager\WindowManager.cs" />
     <Compile Include="Model\Timers\TimerDatabase.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
