--- a/OpenSC/OpenSC.csproj
+++ b/OpenSC/OpenSC.csproj
@@ -77,10 +77,17 @@
     <Compile Include="GUI\Timers\TimerList.Designer.cs">
       <DependentUpon>TimerList.cs</DependentUpon>
     </Compile>
+    <Compile Include="GUI\UMDs\UmdList.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="GUI\UMDs\UmdList.Designer.cs">
+      <DependentUpon>UmdList.cs</DependentUpon>
+    </Compile>
     <Compile Include="GUI\WorkspaceManager\WindowManager.cs" />
     <Compile Include="Model\Timers\TimerDatabase.cs" />
     <Compile Include="Model\UMDs\Datagram.cs" />
     <Compile Include="Model\UMDs\IPort.cs" />
+    <Compile Include="Model\UMDs\UmdDatabase.cs" />
     <Compile Include="Model\UMDs\TSL31\TSL31.cs" />
     <Compile Include="Model\UMDs\TSL31\TSL31Type.cs" />
     <Compile Include="Model\UMDs\TSL31\TSL31Port.cs" />
@@ -122,6 +129,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="GUI\Timers\TimerList.resx">
       <DependentUpon>TimerList.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="GUI\UMDs\UmdList.resx">
+      <DependentUpon>UmdList.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
