--- a/OpenSC/OpenSC.csproj
+++ b/OpenSC/OpenSC.csproj
@@ -77,6 +77,12 @@
     <Compile Include="GUI\Timers\TimerList.Designer.cs">
       <DependentUpon>TimerList.cs</DependentUpon>
     </Compile>
+    <Compile Include="GUI\UMDs\UmdEditWindow.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="GUI\UMDs\UmdEditWindow.Designer.cs">
+      <DependentUpon>UmdEditWindow.cs</DependentUpon>
+    </Compile>
     <Compile Include="GUI\UMDs\UmdList.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -129,6 +135,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="GUI\Timers\TimerList.resx">
       <DependentUpon>TimerList.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="GUI\UMDs\UmdEditWindow.resx">
+      <DependentUpon>UmdEditWindow.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="GUI\UMDs\UmdList.resx">
       <DependentUpon>UmdList.cs</DependentUpon>
