--- a/OpenSC/OpenSC.csproj
+++ b/OpenSC/OpenSC.csproj
@@ -93,6 +93,9 @@
     <Compile Include="Model\Timers\TimerDatabase.cs" />
     <Compile Include="Model\UMDs\Datagram.cs" />
     <Compile Include="Model\UMDs\IPort.cs" />
+    <Compile Include="Model\UMDs\McCurdy\McCurdyUMD1.cs" />
+    <Compile Include="Model\UMDs\McCurdy\McCurdyPort.cs" />
+    <Compile Include="Model\UMDs\McCurdy\McCurdyUMD1Type.cs" />
     <Compile Include="Model\UMDs\UmdDatabase.cs" />
     <Compile Include="Model\UMDs\TSL31\TSL31.cs" />
     <Compile Include="Model\UMDs\TSL31\TSL31Type.cs" />
