Make databases registerable

--- a/OpenSC/OpenSC.csproj
+++ b/OpenSC/OpenSC.csproj
@@ -91,6 +91,8 @@
     </Compile>
     <Compile Include="GUI\WorkspaceManager\WindowManager.cs" />
     <Compile Include="Model\DatabaseBase.cs" />
+    <Compile Include="Model\DatabaseNameAttribute.cs" />
+    <Compile Include="Model\IDatabaseBase.cs" />
     <Compile Include="Model\IModel.cs" />
     <Compile Include="Model\MasterDatabase.cs" />
     <Compile Include="Model\Persistence\LookupInAttribute.cs" />
