--- a/OpenSC/OpenSC.csproj
+++ b/OpenSC/OpenSC.csproj
@@ -96,20 +96,26 @@
     <Compile Include="Model\IDatabaseBase.cs" />
     <Compile Include="Model\IModel.cs" />
     <Compile Include="Model\MasterDatabase.cs" />
+    <Compile Include="Model\Persistence\DatabasePersister.cs" />
     <Compile Include="Model\Persistence\LookupInAttribute.cs" />
     <Compile Include="Model\Persistence\PersistAsAttribute.cs" />
+    <Compile Include="Model\Persistence\PolymorphDatabaseAttribute.cs" />
+    <Compile Include="Model\Persistence\TempForeignKeyAttribute.cs" />
+    <Compile Include="Model\Persistence\TypeNameConverter.cs" />
     <Compile Include="Model\Timers\TimerDatabase.cs" />
     <Compile Include="Model\UMDs\Datagram.cs" />
-    <Compile Include="Model\UMDs\IPort.cs" />
+    <Compile Include="Model\UMDs\UmdPort.cs" />
     <Compile Include="Model\UMDs\McCurdy\McCurdyUMD1.cs" />
     <Compile Include="Model\UMDs\McCurdy\McCurdyPort.cs" />
     <Compile Include="Model\UMDs\McCurdy\McCurdyUMD1Type.cs" />
+    <Compile Include="Model\UMDs\UmdPortDatabase.cs" />
     <Compile Include="Model\UMDs\UmdDatabase.cs" />
     <Compile Include="Model\UMDs\TSL31\TSL31.cs" />
     <Compile Include="Model\UMDs\TSL31\TSL31Type.cs" />
     <Compile Include="Model\UMDs\TSL31\TSL31Port.cs" />
     <Compile Include="Model\UMDs\UMD.cs" />
     <Compile Include="Model\UMDs\IUMDType.cs" />
+    <Compile Include="Model\UMDs\UmdTypeNameConverter.cs" />
     <Compile Include="Modules\IModule.cs" />
     <Compile Include="Modules\ModuleManager.cs" />
     <Compile Include="Modules\Routers\RoutersModule.cs" />
