--- a/OpenSC/OpenSC.csproj
+++ b/OpenSC/OpenSC.csproj
@@ -104,10 +104,11 @@
     <Compile Include="Model\Persistence\TypeNameConverter.cs" />
     <Compile Include="Model\Timers\TimerDatabase.cs" />
     <Compile Include="Model\UMDs\Datagram.cs" />
-    <Compile Include="Model\UMDs\IPort.cs" />
+    <Compile Include="Model\UMDs\UmdPort.cs" />
     <Compile Include="Model\UMDs\McCurdy\McCurdyUMD1.cs" />
     <Compile Include="Model\UMDs\McCurdy\McCurdyPort.cs" />
     <Compile Include="Model\UMDs\McCurdy\McCurdyUMD1Type.cs" />
+    <Compile Include="Model\UMDs\UmdPortDatabase.cs" />
     <Compile Include="Model\UMDs\UmdDatabase.cs" />
     <Compile Include="Model\UMDs\TSL31\TSL31.cs" />
     <Compile Include="Model\UMDs\TSL31\TSL31Type.cs" />
