--- a/OpenSC/OpenSC.csproj
+++ b/OpenSC/OpenSC.csproj
@@ -104,6 +104,8 @@
     <Compile Include="Model\Persistence\TypeNameConverter.cs" />
     <Compile Include="Model\Timers\TimerDatabase.cs" />
     <Compile Include="Model\UMDs\Datagram.cs" />
+    <Compile Include="Model\UMDs\McCurdy\ColumnCount.cs" />
+    <Compile Include="Model\UMDs\McCurdy\TextAlignment.cs" />
     <Compile Include="Model\UMDs\UmdPort.cs" />
     <Compile Include="Model\UMDs\McCurdy\McCurdyUMD1.cs" />
     <Compile Include="Model\UMDs\McCurdy\McCurdyPort.cs" />
