--- a/OpenSC/OpenSC.csproj
+++ b/OpenSC/OpenSC.csproj
@@ -117,6 +117,7 @@
     <Compile Include="Model\UMDs\TSL31\TSL31Port.cs" />
     <Compile Include="Model\UMDs\UMD.cs" />
     <Compile Include="Model\UMDs\IUMDType.cs" />
+    <Compile Include="Model\UMDs\UmdPortTypeNameConverter.cs" />
     <Compile Include="Model\UMDs\UmdTypeNameConverter.cs" />
     <Compile Include="Modules\IModule.cs" />
     <Compile Include="Modules\ModuleManager.cs" />
