Save type of windows when persisting

--- a/OpenSC/OpenSC.csproj
+++ b/OpenSC/OpenSC.csproj
@@ -92,6 +92,8 @@
     <Compile Include="GUI\WorkspaceManager\IPersistableWindow.cs" />
     <Compile Include="GUI\WorkspaceManager\WindowManager.cs" />
     <Compile Include="GUI\WorkspaceManager\WindowPersister.cs" />
+    <Compile Include="GUI\WorkspaceManager\WindowTypeNameAttribute.cs" />
+    <Compile Include="GUI\WorkspaceManager\WindowTypeRegister.cs" />
     <Compile Include="Model\DatabaseBase.cs" />
     <Compile Include="Model\DatabaseFile.cs" />
     <Compile Include="Model\DatabaseNameAttribute.cs" />
