--- a/OpenSC/OpenSC.csproj
+++ b/OpenSC/OpenSC.csproj
@@ -57,11 +57,17 @@
     <Compile Include="GUI\ChildWindowWithTitle.Designer.cs">
       <DependentUpon>ChildWindowWithTitle.cs</DependentUpon>
     </Compile>
-    <Compile Include="GUI\ChildWindowWithTitleAndTable.cs">
+    <Compile Include="GUI\ChildWindowWithTable.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="GUI\ChildWindowWithTitleAndTable.Designer.cs">
-      <DependentUpon>ChildWindowWithTitleAndTable.cs</DependentUpon>
+    <Compile Include="GUI\ChildWindowWithTable.Designer.cs">
+      <DependentUpon>ChildWindowWithTable.cs</DependentUpon>
+    </Compile>
+    <Compile Include="GUI\ChildWindowWithTitleTwoParts.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="GUI\ChildWindowWithTitleTwoParts.Designer.cs">
+      <DependentUpon>ChildWindowWithTitleTwoParts.cs</DependentUpon>
     </Compile>
     <Compile Include="GUI\GeneralComponents\Tables\CustomDataGridView.cs">
       <SubType>Component</SubType>
@@ -171,8 +177,11 @@
     <EmbeddedResource Include="GUI\ChildWindowWithTitle.resx">
       <DependentUpon>ChildWindowWithTitle.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="GUI\ChildWindowWithTitleAndTable.resx">
-      <DependentUpon>ChildWindowWithTitleAndTable.cs</DependentUpon>
+    <EmbeddedResource Include="GUI\ChildWindowWithTable.resx">
+      <DependentUpon>ChildWindowWithTable.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="GUI\ChildWindowWithTitleTwoParts.resx">
+      <DependentUpon>ChildWindowWithTitleTwoParts.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="GUI\MainForm.resx">
       <DependentUpon>MainForm.cs</DependentUpon>
