--- a/OpenSC/OpenSC.csproj
+++ b/OpenSC/OpenSC.csproj
@@ -153,6 +153,7 @@
     <Compile Include="Modules\IModule.cs" />
     <Compile Include="Modules\ModuleManager.cs" />
     <Compile Include="Modules\Routers\RoutersModule.cs" />
+    <Compile Include="Modules\Streams\StreamsModule.cs" />
     <Compile Include="Modules\Timers\TimersModule.cs" />
     <Compile Include="Modules\UMDs\UmdsModule.cs" />
     <Compile Include="Program.cs" />
