Add enum to string/bitmap converters

--- a/OpenSC/OpenSC.csproj
+++ b/OpenSC/OpenSC.csproj
@@ -79,6 +79,8 @@
     <Compile Include="GUI\GeneralComponents\Tables\DataGridViewDisableButtonCell.cs" />
     <Compile Include="GUI\GeneralComponents\Tables\DataGridViewImageButtonCell.cs" />
     <Compile Include="GUI\Helpers\Converters\EnumConverter.cs" />
+    <Compile Include="GUI\Helpers\Converters\EnumToBitmapConverter.cs" />
+    <Compile Include="GUI\Helpers\Converters\EnumToStringConverter.cs" />
     <Compile Include="GUI\MainForm.cs">
       <SubType>Form</SubType>
     </Compile>
