--- a/OpenSC/OpenSC.csproj
+++ b/OpenSC/OpenSC.csproj
@@ -169,6 +169,7 @@
     <Compile Include="Model\UMDs\UmdTypeNameConverter.cs" />
     <Compile Include="Modules\IModule.cs" />
     <Compile Include="Modules\ModuleManager.cs" />
+    <Compile Include="Modules\Playouts\PlayoutsModule.cs" />
     <Compile Include="Modules\Routers\RoutersModule.cs" />
     <Compile Include="Modules\Streams\StreamsModule.cs" />
     <Compile Include="Modules\Timers\TimersModule.cs" />
