--- a/OpenSC/OpenSC.csproj
+++ b/OpenSC/OpenSC.csproj
@@ -144,9 +144,9 @@
     <Compile Include="Model\Persistence\TempForeignKeyAttribute.cs" />
     <Compile Include="Model\Persistence\ITypeNameConverter.cs" />
     <Compile Include="Model\Persistence\TypeNameConverterBase.cs" />
-    <Compile Include="Model\Playouts\Playout.cs" />
-    <Compile Include="Model\Playouts\PlayoutDatabase.cs" />
-    <Compile Include="Model\Playouts\PlayoutTypeNameConverter.cs" />
+    <Compile Include="Model\VTRs\Vtr.cs" />
+    <Compile Include="Model\VTRs\VtrDatabase.cs" />
+    <Compile Include="Model\VTRs\VtrTypeNameConverter.cs" />
     <Compile Include="Model\Streams\Stream.cs" />
     <Compile Include="Model\Streams\StreamDatabase.cs" />
     <Compile Include="Model\Streams\StreamState.cs" />
@@ -172,7 +172,7 @@
     <Compile Include="Model\UMDs\UmdTypeNameConverter.cs" />
     <Compile Include="Modules\IModule.cs" />
     <Compile Include="Modules\ModuleManager.cs" />
-    <Compile Include="Modules\Playouts\PlayoutsModule.cs" />
+    <Compile Include="Modules\VTRs\VtrsModule.cs" />
     <Compile Include="Modules\Routers\RoutersModule.cs" />
     <Compile Include="Modules\Streams\StreamsModule.cs" />
     <Compile Include="Modules\Timers\TimersModule.cs" />
