--- a/OpenSC/OpenSC.csproj
+++ b/OpenSC/OpenSC.csproj
@@ -156,6 +156,14 @@
     <Compile Include="Model\Persistence\TempForeignKeyAttribute.cs" />
     <Compile Include="Model\Persistence\ITypeNameConverter.cs" />
     <Compile Include="Model\Persistence\TypeNameConverterBase.cs" />
+    <Compile Include="Model\Settings\Converters\BoolConverter.cs" />
+    <Compile Include="Model\Settings\Converters\ColorConverter.cs" />
+    <Compile Include="Model\Settings\Converters\IntConverter.cs" />
+    <Compile Include="Model\Settings\Converters\ISettingValueConverter.cs" />
+    <Compile Include="Model\Settings\ISetting.cs" />
+    <Compile Include="Model\Settings\Setting.cs" />
+    <Compile Include="Model\Settings\SettingsManager.cs" />
+    <Compile Include="Model\Settings\Converters\SettingValueConverterAttribute.cs" />
     <Compile Include="Model\VTRs\CasparCgPlayout.cs" />
     <Compile Include="Model\VTRs\Vtr.cs" />
     <Compile Include="Model\VTRs\VtrDatabase.cs" />
