Add split button component (source: https://stackoverflow.com/a/27173509)

--- a/OpenSC/OpenSC.csproj
+++ b/OpenSC/OpenSC.csproj
@@ -81,6 +81,9 @@
     <Compile Include="GUI\GeneralComponents\Menus\CustomToolStripMenuItem.cs">
       <SubType>Component</SubType>
     </Compile>
+    <Compile Include="GUI\GeneralComponents\SplitButton.cs">
+      <SubType>Component</SubType>
+    </Compile>
     <Compile Include="GUI\GeneralComponents\Tables\CustomDataGridView.cs">
       <SubType>Component</SubType>
     </Compile>
