--- a/OpenSC/OpenSC.csproj
+++ b/OpenSC/OpenSC.csproj
@@ -147,6 +147,12 @@
     <Compile Include="GUI\Timers\TimerList.Designer.cs">
       <DependentUpon>TimerList.cs</DependentUpon>
     </Compile>
+    <Compile Include="GUI\ModelEditorFormBase.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="GUI\ModelEditorFormBase.Designer.cs">
+      <DependentUpon>ModelEditorFormBase.cs</DependentUpon>
+    </Compile>
     <Compile Include="GUI\UMDs\UmdEditWindow.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -289,6 +295,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="GUI\Timers\TimerList.resx">
       <DependentUpon>TimerList.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="GUI\ModelEditorFormBase.resx">
+      <DependentUpon>ModelEditorFormBase.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="GUI\UMDs\UmdEditWindow.resx">
       <DependentUpon>UmdEditWindow.cs</DependentUpon>
