--- a/OpenSC/OpenSC.csproj
+++ b/OpenSC/OpenSC.csproj
@@ -179,6 +179,12 @@
     <Compile Include="GUI\UMDs\UmdList.Designer.cs">
       <DependentUpon>UmdList.cs</DependentUpon>
     </Compile>
+    <Compile Include="GUI\VTRs\VtrEditorFormBase.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="GUI\VTRs\VtrEditorFormBase.Designer.cs">
+      <DependentUpon>VtrEditorFormBase.cs</DependentUpon>
+    </Compile>
     <Compile Include="GUI\VTRs\VtrEditorFormTypeRegister.cs" />
     <Compile Include="GUI\VTRs\VtrList.cs">
       <SubType>Form</SubType>
@@ -325,6 +331,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="GUI\UMDs\UmdList.resx">
       <DependentUpon>UmdList.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="GUI\VTRs\VtrEditorFormBase.resx">
+      <DependentUpon>VtrEditorFormBase.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="GUI\VTRs\VtrList.resx">
       <DependentUpon>VtrList.cs</DependentUpon>
