--- a/OpenSC/OpenSC.csproj
+++ b/OpenSC/OpenSC.csproj
@@ -165,11 +165,11 @@
     <Compile Include="GUI\ModelEditorFormBase.Designer.cs">
       <DependentUpon>ModelEditorFormBase.cs</DependentUpon>
     </Compile>
-    <Compile Include="GUI\UMDs\UmdEditWindow.cs">
+    <Compile Include="GUI\UMDs\UmdEditorFormBase.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="GUI\UMDs\UmdEditWindow.Designer.cs">
-      <DependentUpon>UmdEditWindow.cs</DependentUpon>
+    <Compile Include="GUI\UMDs\UmdEditorFormBase.Designer.cs">
+      <DependentUpon>UmdEditorFormBase.cs</DependentUpon>
     </Compile>
     <Compile Include="GUI\UMDs\UmdPortEditorFormTypeRegister.cs" />
     <Compile Include="GUI\UMDs\UmdEditorFormTypeRegister.cs" />
@@ -320,8 +320,8 @@
     <EmbeddedResource Include="GUI\ModelEditorFormBase.resx">
       <DependentUpon>ModelEditorFormBase.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="GUI\UMDs\UmdEditWindow.resx">
-      <DependentUpon>UmdEditWindow.cs</DependentUpon>
+    <EmbeddedResource Include="GUI\UMDs\UmdEditorFormBase.resx">
+      <DependentUpon>UmdEditorFormBase.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="GUI\UMDs\UmdList.resx">
       <DependentUpon>UmdList.cs</DependentUpon>
